--- a/CS2ARonaldAbel_MVCPROJECT/Views/Student/AddNewStudent.cshtml
+++ b/CS2ARonaldAbel_MVCPROJECT/Views/Student/AddNewStudent.cshtml
@@ -1,7 +1,4 @@
-﻿@{
-    ViewData["Title"] = "Add New Student";]
-}
-<div class="container mt-4">
+﻿<div class="container mt-4">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card">
@@ -11,17 +8,16 @@
                 <div class="card-body">
                     <form id="addStudentForm">
                         <div class="mb-3">
-                            <label for="Name" class="form-label">Name</label>
-                            <input type="text" class="form-control" id="Name" name="Name" required>
+                            <label for="FirstName" class="form-label">FirstName</label>
+                            <input type="text" class="form-control" id="FirstName" name="FirstName" required>
                         </div>
                         <div class="mb-3">
-                            <label for="Gender" class="form-label">Gender</label>
-                            <select class="form-select" id="Gender" name="Gender" required>
-                                <option value="">Select Gender</option>
-                                <option value="Male">Male</option>
-                                <option value="Female">Female</option>
-                                <option value="Other">Other</option>
-                            </select>
+                            <label for="LastName" class="form-label">LastName</label>
+                            <input type="text" class="form-control" id="LastName" name="LastName" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="Age" class="form-label">Age</label>
+                            <input type="number" class="form-control" id="Age" name="Age" required>
                         </div>
                         <div class="mb-3">
                             <label for="Course" class="form-label">Course</label>
