--- a/CS2ARonaldAbel_MVCPROJECT/Views/Student/Index.cshtml
+++ b/CS2ARonaldAbel_MVCPROJECT/Views/Student/Index.cshtml
@@ -28,7 +28,7 @@
                         <td>@student.Course</td>
                         <td>
                             <a href="/Student/EditStudent/@student.Id" class="btn btn-warning m-2">Edit</a>
-                            <a asp-action="DeleteStudent" class="btn btn-danger m-2">Delete</a>
+                            <a asp-action="DeleteStudent" asp-route-id="@student.Id" class="btn btn-danger m-2">Delete</a>
                         </td>
                     </tr>
                 }
